tests/outref/TSCP04_errors.ref

-- Octo only supports numbers with a precision of up to 18 significant digits.
SELECT ROUND(1.01234567890123456789012345, 20);
-- Octo does not enforce that arguments are integers and not floats.
-- Instead, YDB will coerce the second argument to an integer by truncating.
SELECT ROUND(155, 1.5);
SELECT ROUND(155, -1.5);
-- Numeric overflow
SELECT ROUND(155, -47);
1.01234567890123456000
[ERROR] PATH:LINENUM DATE TIME : ERR_UNKNOWN_FUNCTION : No function 'ROUND' defined with given parameter types (INTEGER, NUMERIC)
Error with syntax near (line 1, column 8):

SELECT ROUND(155, 1.5);
       ^^^^^
[ERROR] PATH:LINENUM DATE TIME : ERR_PARSING_COMMAND : Error parsing statement: SELECT ROUND(155, 1.5);
[ERROR] PATH:LINENUM DATE TIME : ERR_UNKNOWN_FUNCTION : No function 'ROUND' defined with given parameter types (INTEGER, NUMERIC)
Error with syntax near (line 1, column 8):

SELECT ROUND(155, -1.5);
       ^^^^^
[ERROR] PATH:LINENUM DATE TIME : ERR_PARSING_COMMAND : Error parsing statement: SELECT ROUND(155, -1.5);
[ERROR] PATH:LINENUM DATE TIME : ERR_YOTTADB : YottaDB error: 150373506,ROUND+6^%ydboctosqlfunctions,%YDB-E-NUMOFLOW, Numeric overflow
